Question 11 complete with the both bonus questions